--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
 						<div class="department-tab">
 							<!-- Nav Tab  -->                                                                                                   
 							<ul class="nav nav-tabs" id="myTab" role="tablist">
-								<li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#t-tab1" role="tab"><img src="img/icon01.jpg" width="120"><span class="first">Help Guide</span></a></li>
-								<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#t-tab2" role="tab"><img src="img/icon02.jpg" width="120"><span class="first">FAQ's</span></a></li>
-								<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#t-tab3" role="tab"><img src="img/icon03.jpg" width="120"><span class="first">Support</span></a></li>
+								<li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#t-tab1" role="tab"><img src="img/icon01.png" width="100"><span class="first">Help Guide</span></a></li>
+								<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#t-tab2" role="tab"><img src="img/icon02.jpg" width="100"><span class="first">FAQ's</span></a></li>
+								<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#t-tab3" role="tab"><img src="img/icon03.jpg" width="100"><span class="first">Support</span></a></li>
 							</ul>
 							<!--/ End Nav Tab -->
 							<div class="tab-content" id="myTabContent">
