lars final revision

--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
 				<div class="row">
 					<div class="col-12" style="z-index: 1;">
 						<ul class="nav nav-pills">
-							<li class="nav-item" style="    margin-right: 10px;">
+							<li class="nav-item" style="    width: 190px;    margin-right: 10px;">
 							  <a class="nav-link active" data-toggle="pill" href="#flamingo" role="tab" aria-controls="pills-flamingo" aria-selected="true"><img src="img/icon01.png" width="70"><br>How to get started</a>
 							</li>
-							<li class="nav-item" style="    margin-right: 10px;">
+							<li class="nav-item" style="    width: 190px;    margin-right: 10px;">
 							  <a class="nav-link" data-toggle="pill" href="#cuckoo" role="tab" aria-controls="pills-cuckoo" aria-selected="false"><img src="img/icon02.png" width="70"><br>FAQ's</a>
 							</li>
-							<li class="nav-item" style="    margin-right: 10px;">
+							<li class="nav-item" style="    width: 190px;    margin-right: 10px;">
 							  <a class="nav-link" data-toggle="pill" href="#ostrich" role="tab" aria-controls="pills-ostrich" aria-selected="false"><img src="img/icon03.png" width="70"><br>Support</a>
 							</li>
 						  </ul>
@@ -180,7 +180,7 @@
 											<p style="margin-top: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra ante vel est lobortis, a commodo magna rhoncus. In quis nisi non quam pharetra commodo. </p>
 											
 											<div class="button" style="margin-top: 25px;">
-												<a href="#" class="btn" style="color: #fff">Get Appointment</a>
+												<a href="https://tendering.riyadhairports.com/web/docs/Partner-Guide.pdf" class="btn" style="color: #fff">Learn More</a>
 											</div>
 										</div>
 									</div>
@@ -211,8 +211,7 @@
 										<div class="row">
 											<div class="col-lg-12">
 												<div class="section-title">
-													<h2>We Are Always Ready to Help You. Book An Appointment</h2>
-													<img src="img/section-img.png" alt="#">
+													<h2>We Are Always Ready to Help You</h2>
 												</div>
 											</div>
 										</div>
@@ -271,7 +270,6 @@
 					<div class="col-lg-12">
 						<div class="section-title">
 							<h2>Latest News & Updates.</h2>
-							<img src="img/favicon.png" alt="#">
 						</div>
 					</div>
 				</div>
