--- a/index.html
+++ b/index.html
@@ -43,19 +43,11 @@
 		
 		<!-- Color CSS -->
 		<link rel="stylesheet" href="css/color/color1.css">
-		<!--<link rel="stylesheet" href="css/color/color2.css">-->
-		<!--<link rel="stylesheet" href="css/color/color3.css">-->
-		<!--<link rel="stylesheet" href="css/color/color4.css">-->
-		<!--<link rel="stylesheet" href="css/color/color5.css">-->
-		<!--<link rel="stylesheet" href="css/color/color6.css">-->
-		<!--<link rel="stylesheet" href="css/color/color7.css">-->
-		<!--<link rel="stylesheet" href="css/color/color8.css">-->
-		<!--<link rel="stylesheet" href="css/color/color9.css">-->
-		<!--<link rel="stylesheet" href="css/color/color10.css">-->
-		<!--<link rel="stylesheet" href="css/color/color11.css">-->
-		<!--<link rel="stylesheet" href="css/color/color12.css">-->
 
 		<link rel="stylesheet" id="colors">
+
+		<link href="https://chatcompose.azureedge.net/static/EN/global/export/css/main.0ec6acf6.css" rel="stylesheet">    
+<script async type="text/javascript" src="https://chatcompose.azureedge.net/static/EN/global/export/js/main.dec259c7.js?user=kevinnambawan-RiyadhAirport&lang=EN" user="kevinnambawan-RiyadhAirport"></script>  
 		
     </head>
     <body>
