--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
 				<div class="row">
 					<div class="col-12" style="z-index: 1;">
 						<ul class="nav nav-pills">
-							<li class="nav-item" style="    width: 190px;    margin-right: 10px;">
-							  <a class="nav-link active" data-toggle="pill" href="#flamingo" role="tab" aria-controls="pills-flamingo" aria-selected="true"><img src="img/icon01.png" width="70"><br>How to get started</a>
+							<li class="nav-item" style="    width: 225px;    margin-right: 10px;">
+							  <a class="nav-link active" data-toggle="pill" href="#flamingo" role="tab" aria-controls="pills-flamingo" aria-selected="true"><img src="img/icon01.png" width="50" style="margin-right: 10px;"> How to get started</a>
 							</li>
-							<li class="nav-item" style="    width: 190px;    margin-right: 10px;">
-							  <a class="nav-link" data-toggle="pill" href="#cuckoo" role="tab" aria-controls="pills-cuckoo" aria-selected="false"><img src="img/icon02.png" width="70"><br>FAQ's</a>
+							<li class="nav-item" style="    width: 225px;    margin-right: 10px;">
+							  <a class="nav-link" data-toggle="pill" href="#cuckoo" role="tab" aria-controls="pills-cuckoo" aria-selected="false"><img src="img/icon02.png" width="50" style="margin-right: 10px;"> FAQ's</a>
 							</li>
-							<li class="nav-item" style="    width: 190px;    margin-right: 10px;">
-							  <a class="nav-link" data-toggle="pill" href="#ostrich" role="tab" aria-controls="pills-ostrich" aria-selected="false"><img src="img/icon03.png" width="70"><br>Support</a>
+							<li class="nav-item" style="    width: 225px;    margin-right: 10px;">
+							  <a class="nav-link" data-toggle="pill" href="#ostrich" role="tab" aria-controls="pills-ostrich" aria-selected="false"><img src="img/icon03.png" width="50" style="margin-right: 10px;"> Support</a>
 							</li>
 						  </ul>
 						  <div class="tab-content">
@@ -167,12 +167,12 @@
 								<div class="row">
 									<div class="col-lg-6">
 										<div class="department-left">
-											<h3>How to get started</h3>
-											<p class="p1" style="margin-top: 15px;">“Vivamus ut tellus sed tellus finibus egestas. Mauris adipiscing aliquet et nisl nec eleifend adipiscing elit.”</p>
-											<p style="margin-top: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra ante vel est lobortis, a commodo magna rhoncus. In quis nisi non quam pharetra commodo. </p>
+											<h3 style="color: #fff;">How to get started</h3>
+											<p class="p1" style="margin-top: 15px; color: #fff;">“Vivamus ut tellus sed tellus finibus egestas. Mauris adipiscing aliquet et nisl nec eleifend adipiscing elit.”</p>
+											<p style="margin-top: 15px; color: #fff;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra ante vel est lobortis, a commodo magna rhoncus. In quis nisi non quam pharetra commodo. </p>
 											
 											<div class="button" style="margin-top: 25px;">
-												<a href="https://tendering.riyadhairports.com/web/docs/Partner-Guide.pdf" class="btn" style="color: #fff">Learn More</a>
+												<a href="https://tendering.riyadhairports.com/web/docs/Partner-Guide.pdf" class="btn" style="color: #1A76D1; background-color: #fff;">Learn More</a>
 											</div>
 										</div>
 									</div>
@@ -182,16 +182,16 @@
 								<div class="row">
 									<div class="col-lg-6">
 										<div class="department-left">
-											<h3>Frequently Asked Questions</h3>
+											<h3 style="color: #fff;">Frequently Asked Questions</h3>
 											<br><br>
-											<p class="p1" style="color: #1A76D1;">Question No.1</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra ante vel est lobortis, a commodo magna rhoncus. In quis nisi non quam pharetra commodo. </p>
+											<p class="p1" style="color: #fff; font-weight: bold;">Question No.1</p>
+											<p style="color: #fff;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra ante vel est lobortis, a commodo magna rhoncus. In quis nisi non quam pharetra commodo. </p>
 											<br><br>
-											<p class="p1" style="color: #1A76D1;">Question No.2</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra ante vel est lobortis, a commodo magna rhoncus. In quis nisi non quam pharetra commodo. </p>
+											<p class="p1" style="color: #fff; font-weight: 900;">Question No.2</p>
+											<p style="color: #fff;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra ante vel est lobortis, a commodo magna rhoncus. In quis nisi non quam pharetra commodo. </p>
 											<br><br>
-											<p class="p1" style="color: #1A76D1;">Question No.3</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra ante vel est lobortis, a commodo magna rhoncus. In quis nisi non quam pharetra commodo. </p>
+											<p class="p1" style="color: #fff; font-weight: 900;">Question No.3</p>
+											<p style="color: #fff;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra ante vel est lobortis, a commodo magna rhoncus. In quis nisi non quam pharetra commodo. </p>
 											
 										</div>
 									</div>
@@ -199,7 +199,7 @@
 							</div>
 						  	<div class="tab-pane fade" id="ostrich" role="tabpanel" aria-labelledby="ostrich-tab">
 								<section class="appointment" style="padding-top: 0;">
-									<div class="container">
+									<div class="container" style="padding: 50px;">
 										<div class="row">
 											<div class="col-lg-12">
 												<div class="section-title">
