--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 		
 		
 		<!-- Breadcrumbs -->
-		<div class="breadcrumbs overlay" style="background: url(img/slider.jpg); height: 410px !important">
-			<div class="container">
+		<div class="breadcrumbs" style="background: url(img/slider.jpg); height: 410px !important">
+			<div class="container" style="margin-top: 5px;">
 				<div class="bread-inner">
 					<div class="row">
 						<div class="col-12">
