--- a/business.html
+++ b/business.html
@@ -105,6 +105,7 @@
 										<ul class="nav menu">
 											<li><a href="./">Home</a></li>
 											<li class="active"><a href="business.html">Business Opportunity</a></li>
+											<li><a href="partners.html">Partners</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</nav>
