--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,7 @@
 										<ul class="nav menu">
 											<li><a href="./">Home</a></li>
 											<li><a href="business.html">Business Opportunity</a></li>
+											<li><a href="partners.html">Partners</a></li>
 											<li class="active"><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</nav>
