--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 										<ul class="nav menu">
 											<li class="active"><a href="#">Home</a></li>
 											<li><a href="business.html">Business Opportunity</a></li>
+											<li><a href="partners.html">Partners</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</nav>
